c-test/builds/10/log
Started by user [8mha:////4JOVRtKJvJlscixthka2FmHWRmLXX14TPVV1FcUw7+TCAAAAmx+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAz2EgZ+/dLi1CL9xJTEouKMvBRLAEFJ5KDEAAAA[0mAdarsha
Running as SYSTEM
Building in workspace /var/lib/jenkins/workspace/c-test
The recommended git tool is: NONE
No credentials specified
 > git rev-parse --resolve-git-dir /var/lib/jenkins/workspace/c-test/.git # timeout=10
Fetching changes from the remote Git repository
 > git config remote.origin.url https://github.com/Adarshnd9/c-test-repo.git # timeout=10
Fetching upstream changes from https://github.com/Adarshnd9/c-test-repo.git
 > git --version # timeout=10
 > git --version # 'git version 2.32.0'
 > git fetch --tags --force --progress -- https://github.com/Adarshnd9/c-test-repo.git +refs/heads/*:refs/remotes/origin/* # timeout=10
 > git rev-parse refs/remotes/origin/master^{commit} # timeout=10
Checking out Revision 5541aadf9257f8d607425057bbc55860ca626d24 (refs/remotes/origin/master)
 > git config core.sparsecheckout # timeout=10
 > git checkout -f 5541aadf9257f8d607425057bbc55860ca626d24 # timeout=10
Commit message: "Update big3.c"
 > git rev-list --no-walk 5541aadf9257f8d607425057bbc55860ca626d24 # timeout=10
[c-test] $ /bin/sh -xe /tmp/jenkins2114486921139684464.sh
+ cd /var/lib/jenkins/workspace/c-test
+ make
gcc -c big3.c
big3.c:1:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
 include <stdio.h>
         ^
make: *** [big3.o] Error 1
Build step 'Execute shell' marked build as failure
Finished: FAILURE
